--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -342,7 +342,7 @@
 
 .header-fixed {
   .page-wrapper {
-    padding-top: 4.875rem;
+    padding-top: 4.75rem;
   }
   &.header-static-mobile {
     .main-header {
