--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -1035,7 +1035,7 @@
     color: $white;
   }
   .right-sidebar-2-header {
-    padding: 19.5px 30px;
+    padding: 18.5px 30px;
     border-radius: 0 0 !important;
     display: block;
     color: $dark;
